# GhostApiservice

./: .travis.yml  README.md  pyproject.toml
Apiservice/: __init__.py  test_Apiservice.py
BaseClass/: BaseApi.py  __init__.py
Httpbin/: __init__.py  httpbin.py
test/: __init__.py  conftest.py  test_case.py
