[tool.poetry]
name = "ghostapiservice"
version = "0.1.0"
description = "Interface test service"
authors = ["GhostGuanyin <40558379+MonHer@users.noreply.github.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.3"
requests = "^2.22"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
coveralls = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
